# agentspace_backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
apps/agencies/: urls.py  views.py
apps/agents/: selectors.py  services.py  urls.py  views.py
apps/ai/: __init__.py  selectors.py  services.py  tests.py  urls.py  views.py
apps/analytics/: selectors.py  urls.py  views.py
apps/auth_api/: __init__.py  apps.py  urls.py  user_urls.py  views.py
apps/carriers/: __init__.py  selectors.py  services.py  urls.py  views.py
apps/clients/: selectors.py  services.py  urls.py  views.py
apps/core/: __init__.py  admin.py  authentication.py  constants.py  exceptions.py  feature_flags.py  hierarchy.py  middleware.py  mixins.py  models.py  permissions.py  serializers.py  throttles.py  utils.py  views.py
apps/dashboard/: __init__.py  services.py  urls.py  views.py
apps/deals/: selectors.py  services.py  urls.py  views.py
apps/ingest/: __init__.py  services.py  storage_service.py  urls.py  views.py
apps/messaging/: selectors.py  services.py  urls.py  views.py
apps/nipr/: apps.py  services.py  urls.py  views.py
apps/onboarding/: __init__.py  models.py  selectors.py  services.py  sse.py  tasks.py  urls.py  views.py
apps/payouts/: selectors.py  urls.py  views.py
apps/positions/: __init__.py  selectors.py  services.py  urls.py  views.py
apps/products/: __init__.py  selectors.py  services.py  urls.py  views.py
apps/search/: __init__.py  selectors.py  urls.py  views.py
apps/sms/: __init__.py  selectors.py  services.py  sse.py  templates_service.py  urls.py  views.py
apps/webhooks/: apps.py  services.py  stripe_service.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  test.py  (+2 more)
services/: __init__.py  agent_service.py  analytics_service.py  base.py  deal_service.py  hierarchy_service.py  search_service.py  sms_service.py
tests/: conftest.py
(+28 files in other folders)
